--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install LaTeX
-        run: sudo apt-get update && sudo apt-get install -y texlive-xetex texlive-latex-extra texlive-fonts-recommended
+        run: sudo apt-get update && sudo apt-get install -y \
+             texlive-xetex texlive-latex-extra texlive-fonts-recommended \
+             texlive-fonts-extra texlive-lang-european
       
       - name: Compile TeX to PDF
         run: xelatex -interaction=nonstopmode -halt-on-error -output-directory=. arpa-cv.tex
