--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,8 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Install LaTeX
-        run: sudo apt-get update && sudo apt-get install -y \
-             texlive-xetex texlive-latex-extra texlive-fonts-recommended \
-             texlive-fonts-extra texlive-lang-european
+      - name: Install Full TeX Live
+        run: sudo apt-get update && sudo apt-get install -y texlive-full
       
       - name: Compile TeX to PDF
         run: xelatex -interaction=nonstopmode -halt-on-error -output-directory=. arpa-cv.tex
