--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Compile LaTeX document
-        uses: dante-ev/latex-action@v2
+        uses: xu-cheng/latex-action@v4
         with:
           root_file: arpa-cv.tex
+          texlive_version: latest
           compiler: xelatex
+          args: "-pdf -file-line-error -halt-on-error -interaction=nonstopmode"
+
 
       - name: Upload PDF as artifact
         uses: actions/upload-artifact@v4
