--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,8 @@ jobs:
         uses: xu-cheng/latex-action@v4
         with:
           root_file: arpa-cv.tex
-          texlive_version: latest
           compiler: xelatex
-          args: "-pdf -file-line-error -halt-on-error -interaction=nonstopmode"
+          args: "-interaction=nonstopmode -file-line-error"
 
 
       - name: Upload PDF as artifact
